<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:orientation="vertical"
    tools:context=".Description2Fragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_margin="20dp"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/notosansjpbold"
        android:text="@string/description2"
        android:textSize="20sp"
        app:lineHeight="40dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/icon_onlyleftallow" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/zenkurenaido"
            android:text="@string/preview"
            android:textSize="20sp"
            android:translationX="-90dp"
            android:translationY="30dp"
            tools:layout_editor_absoluteX="186dp"
            tools:layout_editor_absoluteY="240dp" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/button_shoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:translationY="60dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:src="@drawable/button_background" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/notosansjpbold"
            android:text="@string/button_next"
            android:textColor="#F2F2F2"
            android:textSize="18sp" />

    </FrameLayout>

</LinearLayout>